smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/map-requires-newline.smithy
// Parse error at line 6, column 3 near `string`: Expected a line break
namespace com.foo
map MyMap {
  key: smithy.api#String,
  value: smithy.api#String
} string MyString
